# spherical

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  pixi.toml  pyproject.toml
.github/: LOGGING_GUIDELINES.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: draft-pdf.yml
docs/superpowers/plans/: 2026-07-05-observation-filtering.md
docs/superpowers/specs/: 2026-07-05-observation-filtering-design.md  2026-07-20-irdis-template-matching-design.md
examples/: explore_database.ipynb  generate_database.py  ifs_reduction_template.py  irdis_reduction_template.py
joss/: paper.bib  paper.md
src/spherical/database/: build.py  cluster_matching_tap.py  database_utils.py  enrichment_health.py  file_table.py  gaia_astrophysical_params.py  ifs_observation.py  irdis_observation.py  metadata.py  mocadb_matching.py  observation_table.py  provenance.py  sphere_database.py  target_table.py
src/spherical/pipeline/: badframe_selection.py  cleanup.py  cosmic_ray_removal.py  download_data.py  find_star.py  flux_calibration.py  ifs_reduction.py  imutils.py  irdis_filters.py  irdis_reduction.py  logging_utils.py  mft.py  parallel.py  pipeline_config.py  psf_repair.py  run_trap.py  simplified_IRDIS_reduction.py  spectral_type_teff.csv  step_registry.py  toolbox.py  transmission.py
src/spherical/pipeline/data/: N_ALC_JYH_S-IFS_YJ-transmission.txt  N_ALC_JYH_S-IRDIS_H23-transmission.txt
src/spherical/pipeline/fits/: headers.py
src/spherical/pipeline/fits/tests/: test_ifs_pipeline_fits_header.py
src/spherical/pipeline/steps/: bundle_output.py  cube_header_update.py  download_data.py  extract_cubes.py  find_star.py  flux_psf_calibration.py  frame_info.py  irdis_calibration.py  irdis_preprocess.py  plot_center_evolution.py  process_centers.py  spot_photometry.py  spot_to_flux.py  wavelength_calibration.py
src/spherical/pipeline/visualize/: mosaic.py
src/spherical/scripts/: aggregate_crash_reports.py  aggregate_reduction_status.py  plot_trap_mosaics.py  sync_zenodo_tables.py  update_database.py
src/spherical/sphere_database/: database_utils.py  eso_download.py  file_table.py  ifs_observation.py  irdis_observation.py  master_file_table.py  observation_table.py  reduction_analysis.py  simbad_tap_query.adql  sparta.py  sphere_database.py  target_table.py
src/spherical/utils/: __init__.py  progress.py
tests/: conftest.py  test_build_tables.py  test_config.py  test_coronagraph_transmission.py  test_database.py  test_download_data.py  test_e2e_creation.py  test_enrich_tables.py  test_enrichment_health.py  test_filter.py  test_find_star_irdis.py  test_find_star_warning.py  test_flux_calibration_bpm.py  test_gaia_astrophysical_params.py  test_gaia_stellar_params_trap.py  test_imports.py  test_irdis_calibration.py  test_irdis_preprocess.py  test_irdis_reduction.py  test_irdis_step_registry.py  test_irdis_template.py  test_logging.py  test_mocadb_matching.py  test_mosaic_combinations.py  test_observations_from_name.py  test_plot_trap_mosaics_cli.py  test_process_centers_irdis.py  test_provenance.py  test_provenance_meta.py  test_psf_repair.py  test_reduction_status_resume.py  test_resolve_mode_name.py  test_resume.py  test_resume_skip.py  test_run_trap_bad_frames.py  test_run_trap_irdis.py  test_spot_to_flux_irdis.py  test_sync_provenance.py  test_sync_zenodo.py  test_update_cli.py  (+1 more)
