[project]
name = "spherical"
authors = [{name = "Matthias Samland", email = "m.samland@mailbox.org"}]
description = "VLT/SPHERE Instrument Calibration Pipeline and Database"
readme = "README.md"
license = { file = 'LICENSE' }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11, <3.14"
dependencies = [
    "numpy>=2.0,<3.0",
    "matplotlib>3.0,<4.0",
    "pandas>2.0,<=3.0",
    "astropy>=7.0,<8.0",
    "astroquery>=0.4.8,<=0.4.10",
    "tqdm",
    "natsort",
    "healpy",
    "python-json-logger"
]
dynamic = ['version']

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "numpydoc",
]

pipeline = [
    "dill",
    "scikit-image",
    "photutils",
    "scipy>=1.9.3",
    "charis@git+https://github.com/PrincetonUniversity/charis-dep",
    "trap@git+https://github.com/m-samland/trap",
]

test = [
    "pytest",
    "pytest-cov",
    "pytest-doctestplus",
    "codecov",
    "ruff",
]

notebook = [
    "ipython",
    "notebook",
    "ipywidgets",
    "ipympl",
    "ipydatagrid",
    "seaborn",
]

[project.scripts]
crash_reports = "spherical.scripts.aggregate_crash_reports:main"
reduction_status = "spherical.scripts.aggregate_reduction_status:main"

[project.urls]
"Bug Tracker" = "https://github.com/m-samland/spherical/issues"
"Source Code" = "https://github.com/m-samland/spherical"


[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm>=8.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/spherical/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 127
target-version = "py312"
exclude = [
    'docs',
    '*_version.py',
]

[tool.ruff.lint]
# Enable Ruff rulesets you like (equivalent to Flake8 + isort, etc.)
select = ["E", "F", "I"]  # E/F = Flake8 rules, I = isort rules, C90 = McCabe complexity, D = docstrings
ignore = ["E203", "E501", "E712", "E722", "D100", "D104"] # ignore specific rules (customize as needed)

[tool.ruff.lint.pydocstyle]
convention = "google"

# Ignore specific docstring rules in test files
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 10

[tool.ruff.format]
quote-style = "double"  # to match Black formatting
indent-style = "space"

[tool.coverage.run]
omit = [
    "_version.py",
]